Prepare responsive demo deployment
